# policy-engine

./: .gitignore  AGENTS.md  CLAUDE.md
docs/: Adapter-API-Shape.md  Agent-OS-Backend-Adapter.md  Anthropic-Adapter.md  Canonical-Governance-Plane-Plan.md  Claude-Agent-SDK-Adapter.md  Claude-Agent-SDK-Full-Demo.md  Claude-All-Hooks-Coverage-Plan.md  Claude-Hooks-Integration-Plan.md  Core-Concepts.md  CrewAI-Adapter.md  Demos.md  DotNet-Port.md  Gap-vs-Agent-OS.md  Google-ADK-Adapter.md  Hello-World-Snippets.md  Home.md  Human-Loop.md  LangChain-Adapter.md  MAF-Adapter.md  MCP-Security-Scanner.md  Multi-Agent-Drift.md  Naming-Conventions.md  OpenAI-Agents-SDK-Adapter.md  OpenAI-Assistants-Adapter.md  Prompt-Injection.md  PydanticAI-Adapter.md  Runaway-Cost.md  Seam-Taxonomy.md  _Sidebar.md
human-loop/: README.md  pyproject.toml
human-loop/examples/: irreversible_deploy.py  kill_switch.py  quorum_approval.py  rbac_reader_denied.py  reversibility_registry.py  timeout_default_deny.py
human-loop/src/human_loop/: __init__.py  cli.py  escalation.py  guard.py  kill_switch.py  privacy.py  rbac.py  reversibility.py
human-loop/tests/: test_escalation.py  test_guard_and_cli.py  test_kill_switch.py  test_no_external_runtime_dependency.py  test_rbac.py  test_reversibility.py
mcp-security-scanner/: README.md  pyproject.toml
mcp-security-scanner/examples/: poisoned_mcp_config.json
mcp-security-scanner/src/mcp_security_scanner/: __init__.py  audit.py  cli.py  gateway.py  response.py  scanner.py
mcp-security-scanner/tests/: test_cli.py  test_gateway.py  test_response.py  test_scanner.py
multi-agent-drift/: README.md  pyproject.toml
multi-agent-drift/examples/: budget_exhaustion.py  conversation_escalation.py  drift_scenario.json  handoff_conflicts.py  saga_fanout_compensation.py  two_agents_drifting.py
multi-agent-drift/src/multi_agent_drift/: __init__.py  cli.py  context_budget.py  conversation.py  drift.py  monitor.py  saga.py  session.py
multi-agent-drift/tests/: test_cli_and_monitor.py  test_context_budget.py  test_conversation.py  test_drift.py  test_saga.py  test_session.py
policy-engine/: README.md  pyproject.toml
policy-engine-dotnet/: Directory.Packages.props  PolicyEngine.sln  README.md
policy-engine/src/policy_engine/: __init__.py  audit.py  context.py  kernel.py  policy.py  rate_limit.py
policy-engine/src/policy_engine/adapters/: __init__.py  agent_os.py  anthropic.py  claude.py  crewai.py  google_adk.py  langchain.py  maf.py  openai_agents.py  openai_assistants.py  pydantic_ai.py
policy-engine/tests/: test_anthropic_adapter.py  test_claude_adapter.py  test_google_adk_adapter.py  test_policy.py  test_rate_limit.py
policy_engine_demos/: _shared.py  agent_os_governed.py  claude_governed.py  google_adk_callbacks_governed.py  langchain_governed.py  maf_governed.py  openai_agents_sdk_governed.py  openai_assistants_governed.py  run_all.py
policy_engine_hello_world_multi_real/: _shared.py  anthropic_agent.py  claude_agent_sdk_agent.py  google_adk_agent.py  langchain_agent.py  microsoft_agent.py  openai_agent.py  run_all.py
policy_engine_hello_world_multi_real_consolidated/: _shared.py  all_in_one.py  run_all.py  (+17 more)
prompt-injection/: README.md  pyproject.toml
prompt-injection/examples/: canary_leak.py  cve_manual_advisory.py  direct_override.py  encoded_injection.py  llamafirewall_fallback.py  mcp_response_scan.py  signing_replay.py
prompt-injection/src/prompt_injection/: __init__.py  cli.py  cve.py  detector.py  llamafirewall.py  mcp.py  signing.py
prompt-injection/tests/: test_cli_and_mcp.py  test_cve.py  test_detector.py  test_llamafirewall.py  test_no_agent_os_dependency.py  test_signing.py
runaway-cost/: README.md  pyproject.toml
runaway-cost/examples/: agent_rate_limiter.py  budget_exhaustion.py  cascade_detector.py  circuit_breaker_recovery.py  retry_policy.py  runaway_guard.py  sliding_window.py  token_bucket.py
runaway-cost/src/runaway_cost/: __init__.py  budget.py  circuit_breaker.py  cli.py  guard.py  rate_limit.py  retry.py
runaway-cost/tests/: test_budget.py  test_circuit_retry.py  test_guard_cli.py  test_no_external_runtime_dependency.py  test_rate_limit.py
(+24 files in other folders)
