[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-injection"
version = "0.1.0"
description = "Standalone prompt-injection and untrusted-content defenses."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Agent Governance Toolkit" }]
dependencies = ["mcp-security-scanner>=0.1.0"]

[project.optional-dependencies]
yaml = ["PyYAML>=6"]
llamafirewall = ["llamafirewall"]
test = ["pytest>=7"]
all = ["PyYAML>=6", "llamafirewall"]

[project.scripts]
prompt-injection = "prompt_injection.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
